singlepage/stylesheet/kustomize/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: stylesheet
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
